# -Introduction-to-AI

./: .gitignore  README.md  docker-compose.yml
.agents/rules/: CICD_STANDARDS.md  TEAM_RULES.md
.agents/workflows/: CICD_ARCHITECTURE.md  CUSTOM_AI_ARCHITECTURE.md  SIMULATION_PROTOCOL.md  SPRINT_WORKFLOW.md
.github/workflows/: pr-checks.yml
Gomoku-main/: .gitignore  CMakeLists.txt  README.md
Gomoku-main/include/argparse/: argparse.hpp
Gomoku-main/src/: board.hpp  cli_game.cpp  cli_game.hpp  engine.hpp  memory.cpp  thread.cpp  thread.hpp  tptable.cpp  zobrist.cpp
ai-engine/: Dockerfile  requirements.txt
ai-engine/src/: train.py
ai-engine/src/models/: character_recognizer.py  plate_detector.py
backend-service/: Dockerfile
docs/: DOCKER_ORCHESTRATION.md
frontend-dashboard/: Dockerfile  package-lock.json  package.json  tsconfig.app.json
frontend-dashboard/src/: App.tsx  index.css
frontend-dashboard/src/components/layout/: DashboardLayout.tsx  Header.tsx  Sidebar.tsx
frontend-dashboard/src/components/settings-page/: AppearanceTab.tsx  BillingTab.tsx  NotificationsTab.tsx  ProfileTab.tsx  SecurityTab.tsx
frontend-dashboard/src/components/ui/: card.tsx
frontend-dashboard/src/pages/: Analytics.tsx  Customers.tsx  Dashboard.tsx  Settings.tsx
frontend-dashboard/src/store/: useAppStore.ts
gui/: app.js  index.html  server.py  style.css
include/ryehl/: inplace_vector.hpp
old/: README.md
simulation-tools/: Dockerfile
src/: board.cpp  engine.cpp  inplace_vector.hpp  main.cpp  memory.hpp  misc.hpp  tptable.hpp  types.hpp  zobrist.hpp
web/: DEVELOPMENT_LOG.md  RUN_INSTRUCTIONS.md  server.py
web/static/: app.js  index.html  style.css
